--- a/html/index.html
+++ b/html/index.html
@@ -11,17 +11,16 @@
 	<nav>
 		<ul>
 			<li><a href="index.html">About Me</a></li>
-			<li><a href="portfolio.html">Portfolio</a></li>
+			<li><a href="portfolio.html">Projects</a></li>
 		</ul>
 	</nav>
-	<img src="#link">
 	<h1>Kim Orr</h1>
 	<h2>Telling Stories Through Writing and Design</h2>
 	<p>I'm an editor, writer and designer with a passion for storytelling. I have more than 10 years of experience editing, writing and producing multi-dimensional content for digital and print media. I also dabble in website design and infographics.</p>
 </body>
 <footer>
 	<ul>
-		<li>Social Media</li>
+		<li>Social Media:</li>
 		<li><a href="https://www.linkedin.com/in/kimberlyorr/">LinkedIn</a></li>
 		<li><a href="http://behance.net/kimorr">Behance</a></li>
 		<li><a href="https://www.instagram.com/kimmarie23/">Instagram</a></li>
