--- a/html/index.html
+++ b/html/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Kim Orr: Editor, Writer, Designer - About Me</title>
+	<title>Kim Orr: Editor, Writer, Designer - About</title>
 	<link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-	<header>
-		<img src="#link">
-	</header>
 	<nav>
 		<ul>
-			<li><a href="index.html">About Me</a></li>
+			<li><a href="index.html">About</a></li>
 			<li><a href="portfolio.html">Projects</a></li>
 		</ul>
 	</nav>
-	<h1>Kim Orr</h1>
-	<h2>Telling Stories Through Writing and Design</h2>
-	<p>I'm an editor, writer and designer with a passion for storytelling. I have more than 10 years of experience editing, writing and producing multi-dimensional content for digital and print media. I also dabble in website design and infographics.</p>
+	<div class="about_container">
+		<img src="../images/profile_pic.jpg" alt="Kim Orr at NASA's Jet Propulsion Laboratory">
+		<div class="about_text">
+			<h1>Kim Orr</h1>
+			<h2>Telling Stories Through Writing and Design</h2>
+			<p>I'm an editor, writer and designer with a passion for storytelling. I have more than 10 years of experience editing, writing and producing multi-dimensional content for digital and print media. I also dabble in website design and infographics.</p>
+		</div>
+	</div>
 </body>
 <footer>
 	<ul>
-		<li>Social Media:</li>
+		<li>Also, find me on:</li>
 		<li><a href="https://www.linkedin.com/in/kimberlyorr/">LinkedIn</a></li>
 		<li><a href="http://behance.net/kimorr">Behance</a></li>
 		<li><a href="https://www.instagram.com/kimmarie23/">Instagram</a></li>
