--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -5,63 +5,55 @@
 	<link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-<header>
-		<img src="#link">
-</header>
-<nav>
-	<ul>
-		<li><a href="index.html">About Me</a></li>
-		<li><a href="portfolio.html">Projects</a></li>
-	</ul>
-</nav>
-<h1>Projects</h1>
-<ul class="project_list">	
-	<li>
-		<div class="project_container">
-			<img src="../images/about_me_deliverable.png">		
-			<div class="project_text">
-				<h2>Portfolio Website</h2>
-				<p>Assignment No. 1 for GA's Front-End Web Development Course</p>
+	<nav>
+		<ul>
+			<li><a href="index.html">About</a></li>
+			<li><a href="portfolio.html">Projects</a></li>
+		</ul>
+	</nav>
+	<h1>My Work</h1>
+	<ul class="project_list">	
+		<li>
+			<div class="project_list_container">
+				<img src="../images/about_me_deliverable.png" alt="Portfolio website screengrab">		
+				<div class="project_list_text">
+					<h2>Portfolio Website</h2>
+					<p>Assignment No. 1 for GA's Front-End Web Development Course</p>
+				</div>
 			</div>
-		</div>
-	</li>
-		
-	<li>	
-		<div class="project_container">
-			<img src="../images/citipix_deliverable.png">
-			<div class="project_text">
-				<h2>CitiPix</h2>
-				<p><em>Coming soon ...</em></p>	
-			</div>	
-		</div>
-	</li>
-
-		
-	<li>
-		<div class="project_container">
-			<img src="../images/relaxr_deliverable.png">
-			<div class="project_text">
-				<h2>Relaxr</h2>
-				<p><em>Coming soon ...</em></p>	
-			</div>	
-		</div>
-	</li>
-	
-	
-	<li>
-		<div class="project_container">
-			<img src="../images/startup_matchmaker_deliverable.png">
-			<div class="project_text">
-				<h2>Matchmaker</h2>
-				<p><em>Coming soon ...</em></p>
-			</div>	
-		</div>
-	</li>
-</ul>
+		</li>	
+		<li>	
+			<div class="project_list_container">
+				<img src="../images/citipix_deliverable.png" alt="Citipix website screengrab">
+				<div class="project_list_text">
+					<h2>CitiPix</h2>
+					<p><span class="tk">Coming soon ...</span></p>	
+				</div>	
+			</div>
+		</li>			
+		<li>
+			<div class="project_list_container">
+				<img src="../images/relaxr_deliverable.png" alt="Relaxr website screengrab">
+				<div class="project_list_text">
+					<h2>Relaxr</h2>
+					<p><span class="tk">Coming soon ...</span></p>	
+				</div>	
+			</div>
+		</li>				
+		<li>
+			<div class="project_list_container">
+				<img src="../images/startup_matchmaker_deliverable.png" alt="Startup Matchmaker website screengrab">
+				<div class="project_list_text">
+					<h2>Startup Matchmaker</h2>
+					<p><span class="tk">Coming soon ...</span></p>
+				</div>	
+			</div>
+		</li>
+	</ul>
 </body>
 <footer>
 	<ul>
-		<li>Social Media:</li>
+		<li>Also, find me on:</li>
 		<li><a href="https://www.linkedin.com/in/kimberlyorr/">LinkedIn</a></li>
 		<li><a href="http://behance.net/kimorr">Behance</a></li>
 		<li><a href="https://www.instagram.com/kimmarie23/">Instagram</a></li>
